<resources>
    <string name="app_name">Mini Projet</string>
    <string name="edit_text_carac1_hint">Surface du bien</string>
    <string name="carac_button_text">Estimer</string>
    <string name="estimation_text">Le prix du bien est estimé à %1$.2f €</string>
    <string name="carac1_text">Surface habitable</string>
    <string name="carac2_text">Surface terrain</string>
    <string name="carac3_text">Nombre pièces</string>
    <string name="carac4_text">carac4</string>
    <string name="estimation_error_text">Erreur de format</string>
    <string name="edit_text_carac2_hint">Nombre de pièces</string>
    <string name="edit_text_carac3_hint">Surface terrain</string>
    <string name="edit_text_carac4_hint">Longitude</string>
    <string name="edit_text_carac5_hint">Latitude</string>
    <string name="edit_text_carac6_hint">Type de bien 1 pour maison 2 pour appartement</string>
</resources>